# MethylGPT

./: .gitignore  LICENSE  README.md  pyproject.toml
bash_griffin/: run_pretrain.sh  submit_job.sh
methylgpt/: __init__.py
methylgpt/model/: methyl_datasets.py  methyl_loss.py  methyl_model.py  methyl_vocab.py
methylgpt/modules/scGPT/scgpt/model/: __init__.py  model.py
methylgpt/modules/scGPT/scgpt/tokenizer/: gene_tokenizer.py
methylgpt/utils/: logging.py
pretrained_models/dev_pretraining_test-dataset_CpGs_type3-preprocessing_False-Sep26-10-27/: args.json
tutorials/get_embeddings/: get_embeddings.ipynb  plot_embeddings.ipynb
tutorials/pretraining/: QCed_samples_type3.csv  config.json  config_ex.json  config_example.json  download_files.sh  preprocess_data.py  pretraining.py  run_pretraining.sh  utils.py
tutorials/pretraining/data/: download_parquet_data.sh
tutorials/pretraining/data_examples/: download_raw_data.sh
