[tool.poetry]
name = "methylgpt"
version = "0.1.2"
description = ""
authors = ["Jinyeop Song <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
scvi-tools = "1.1.5"
scanpy = "1.9.8"
torch = "2.3.0"
torchtext = "0.18.0"
numba = "0.60.0"
scikit-misc = "0.3.1"
umap-learn = "0.5.6"
leidenalg = "0.10.2"
datasets = "2.21.0"
typing-extensions = "4.12.2"
scib = "1.1.5"
yarrowformat = "1.2.0"  # Latest version as of 2 months ago
psutil = "6.1.0"  # Latest version as of 2 months ago
wandb = "^0.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
